--- a/app/Views/adminPage.html
+++ b/app/Views/adminPage.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>ADMINISTRATOR | SIEMENS</title>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://bootswatch.com/4/united/bootstrap.min.css" >
+    <link href="/adminPage.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <p1>Hello {{admin}}!</p1>
+
+    <!--<p1>Hello {{admin}}!</p1>-->
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="collapse navbar-collapse" id="navbarColor02">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/administrator/logout">LOG OUT</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="registerBox">
         <h1>ADD A NEW ACCOUNT!</h1>
         <form action="/administrator/registerUser" method="post">
@@ -19,7 +35,7 @@
             <input type="text" name="userName" placeholder="Username" required>
             <p>PASSWORD:</p>
             <input type="password" name="password" placeholder="Password" minlength="6" required>
-            <p>FUNCTION:</p><br>
+            <p>FUNCTION:</p>
             <select name="function">
                 <option value="employee">Employee</option>
                 <option value="administrator">Administrator</option>
@@ -28,84 +44,10 @@
             <input type="submit" name="" value="ADD">
         </form>
     </div>
+
 </body>
 </html>
 
 <style>
-    body{
-        background-color: yellow;
-    }
-
-    .registerBox{
-        width: 400px;
-        height: 615px;
-        background: #fb2525;
-        color: black;
-        top:45%;
-        left:17%;
-        position:absolute;
-        transform: translate(-50%,-50%);
-        box-sizing: border-box;
-        padding: 30px 30px;
-    }
-
-
-
-
-    h1{
-        margin: 0;
-        padding: 0 0 15px;
-        text-align: center;
-        font-size: 25px;
-        color: black;
-    }
-
-    .registerBox p{
-        margin: 0;
-        padding: 0;
-        font-size: 20px;
-        font-family: "Comic Sans MS";
-        color: black;
-        font-weight: bold;
-    }
-
-    .registerBox input{
-        width: 100%;
-        margin-bottom: 20px;
-    }
-    .registerBox input[type="text"], input[type="password"]{
-        border:none;
-        border-bottom: 1px solid #fff;
-        background: white;
-        outline: none;
-        height: 38px;
-        color: black;
-        font-weight: bold;
-        font-size: 30px;
-        font-family: "Times New Roman";
-    }
-
-    .registerBox input[type="submit"]{
-        border: none;
-        outline: black;
-        height: 40px;
-        background: #fb2525;
-        color: #fff;
-        font-size: 18px;
-        border-radius: 20px;
-    }
-
-    .registerBox input[type="submit"]:hover{
-        cursor:pointer;
-        background: black;
-        color: white;
-    }
-
-    .registerBox select{
-        color: black;
-        font-weight: bold;
-        font-size: 30px;
-        font-family: "Times New Roman";
-    }
 
 </style>
