--- a/app/Views/loginPage.html
+++ b/app/Views/loginPage.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>HOME | SIEMENS</title>
+    <link href="homePage.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
     <div class="loginBox">
-        <h1>Welcome back!</h1>
+        <h1>WELCOME BACK!</h1>
         <form action="/login" method="post">
-            <p>Email:</p>
+            <br>
+            <p>EMAIL:</p>
             <input type="text" name="email" placeholder="Enter email" required>
-
-            <p>Password:</p>
+            <br><br>
+            <p>PASSWORD:</p>
             <input type="password" name="password" placeholder="Enter password" minlength="6" required>
+            <br><br>
             <input type="submit" name="" value="Login">
-
         </form>
 
     </div>
@@ -24,67 +26,6 @@
 </html>
 
 <style>
-    body{
-        background-color: #ffc107;
-    }
 
-    .loginBox{
-        width: 320px;
-        height: 420px;
-        background: #000;
-        color:;
-        top:50%;
-        left:50%;
-        position:absolute;
-        transform: translate(-50%,-50%);
-        box-sizing: border-box;
-        padding: 70px 30px;
-    }
-
-    h1{
-        margin: 0;
-        padding: 0 0 15px;
-        text-align: center;
-        font-size: 22px;
-        color: white;
-    }
-
-    .loginBox p{
-        margin: 0;
-        padding: 0;
-        font-size: 20px;
-        font-family: "Comic Sans MS";
-        color: white;
-    }
-
-    .loginBox input{
-        width: 100%;
-        margin-bottom: 20px;
-    }
-    .loginBox input[type="text"], input[type="password"]{
-        border:none;
-        border-bottom: 1px solid #fff;
-        background: transparent;
-        outline: none;
-        height: 40px;
-        color: #fff;
-
-    }
-
-    .loginBox input[type="submit"]{
-        border: none;
-        outline: none;
-        height: 40px;
-        background: #fb2525;
-        color: #fff;
-        font-size: 18px;
-        border-radius: 20px;
-    }
-
-    .loginBox input[type="submit"]:hover{
-        cursor:pointer;
-        background: #ffc107;
-        color: #000;
-    }
 
 </style>
