--- a/app/Views/loginPage.html
+++ b/app/Views/loginPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HOME | SIEMENS</title>
-    <link href="homePage.css" type="text/css" rel="stylesheet">
+    <link href="css/home.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
@@ -24,8 +24,3 @@
 
 </body>
 </html>
-
-<style>
-
-
-</style>
