--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,6 +1,13 @@
 body{
-    background: url(homePage.jpg) no-repeat center center fixed;
+    background: url(admin.jpg) no-repeat center center fixed;
+}
 
+nav{
+    background: royalblue;
+}
+
+li{
+    margin: 10px;
 }
 
 .loginBox{
