--- a/app/Views/home.html
+++ b/app/Views/home.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>HOME | SIEMENS</title>
-    <link href="css/home.css" type="text/css" rel="stylesheet">
-</head>
-<body>
+{% set pageTitle="HOME | SIEMENS" %}
+
+{% extends "layout.html" %}
+
+{% block head %}
+    {{parent()}}
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://bootswatch.com/4/united/bootstrap.min.css" >
+    <link rel="stylesheet" href="css/home.css">
+{% endblock %}
+
+{% block content %}
 
     <div class="loginBox">
         <h1>WELCOME BACK!</h1>
@@ -22,5 +26,4 @@
 
     </div>
 
-</body>
-</html>
+{% endblock %}
