--- a/app/Views/administrator/addUser.html
+++ b/app/Views/administrator/addUser.html
@@ -1,4 +1,4 @@
-{% set pageTitle="Adauga cont" %}
+{% set pageTitle="Add" %}
 
 
 {% extends "administrator/homeAdmin.html" %}
@@ -6,8 +6,6 @@
 
 {% block head %}
     {{parent()}}
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://bootswatch.com/4/united/bootstrap.min.css" >
     <link rel="stylesheet" href="css/administrator2.css">
 {% endblock %}
 
