--- a/app/Views/layout.html
+++ b/app/Views/layout.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     {% block head %}
-    <link rel="stylesheet" href="style.css" />
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://bootswatch.com/4/united/bootstrap.min.css" >
     <title>{{pageTitle}}</title>
+
     {% endblock %}
 </head>
 <body>
