--- a/app/Views/administrator/homeAdmin.html
+++ b/app/Views/administrator/homeAdmin.html
@@ -6,9 +6,9 @@
 
 {% block head %}
     {{parent()}}
-    <link rel="stylesheet" href="css/administrator.css">
-{% endblock %}
 
+    <link rel="stylesheet" type="text/css" href="/css/administrator.css">
+{% endblock %}
 
 {% block content %}
 
@@ -25,12 +25,13 @@
                     <a class="nav-link btn btn-light" href="/administrator/deleteAccount">DELETE ACCOUNT</a>
                 </li>
                 <li>
+                    <a class="nav-link btn btn-light" href="/administrator/redirect">OFFICIAL SITE</a>
+                </li>
+                <li>
                     <a class="nav-link btn btn-light" href="/administrator/logout">LOG OUT</a>
                 </li>
             </ul>
         </div>
     </nav>
-
-
 
 {% endblock %}
