--- a/app/Views/layout.html
+++ b/app/Views/layout.html
@@ -10,6 +10,8 @@
     {% endblock %}
 </head>
 <body>
-<div id="content">{% block content %}Default content{% endblock %}</div>
+<div id="content">
+    {% block content %}Default content{% endblock %}
+</div>
 </body>
 </html>
