--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,65 +1,11 @@
 body{
     background: url(home.jpg) no-repeat center center fixed;
-
 }
 
-.loginBox{
-    width: 330px;
-    height: 440px;
-    background: #000;
-    color: white;
-    top:50%;
-    left:50%;
-    position:absolute;
-    transform: translate(-50%,-50%);
-    box-sizing: border-box;
-    padding: 50px 30px;
+nav{
+    background: royalblue;
 }
 
-h1{
-    margin: 0;
-    padding: 0 0 15px;
-    text-align: center;
-    font-size: 30px;
-    color:aqua;
-    font-weight: bold;
-}
-
-.loginBox p{
-    margin: 0;
-    padding: 0;
-    font-size: 20px;
-    font-family: "Comic Sans MS";
-    color: white;
-}
-
-.loginBox input{
-    width: 100%;
-    margin-bottom: 20px;
-}
-.loginBox input[type="text"], input[type="password"]{
-    border:none;
-    border-bottom: 1px solid #fff;
-    background: transparent;
-    outline: none;
-    height: 40px;
-    color: #fff;
-    font-size: 18px;
-
-}
-
-.loginBox input[type="submit"]{
-    border: none;
-    outline: none;
-    height: 40px;
-    background: #fb2525;
-    color: #fff;
-    font-size: 18px;
-    border-radius: 20px;
-}
-
-.loginBox input[type="submit"]:hover{
-    cursor:pointer;
-    background: #ffc107;
-    color: #000;
+li{
+    margin: 10px;
 }
