--- a/app/Views/administrator/addUser.html
+++ b/app/Views/administrator/addUser.html
@@ -6,7 +6,7 @@
 
 {% block head %}
     {{parent()}}
-    <link rel="stylesheet" type="text/css" href="/css/administrator2.css">
+    <link rel="stylesheet" type="text/css" href="/css/administrator//addUser.css">
 {% endblock %}
 
 
