--- a/app/Views/administrator/deleteUser.html
+++ b/app/Views/administrator/deleteUser.html
@@ -6,7 +6,7 @@
 
 {% block head %}
     {{parent()}}
-    <link rel="stylesheet" type="text/css" href="/css/administrator3.css" >
+    <link rel="stylesheet" type="text/css" href="/css/administrator/deleteUser.css" >
 {% endblock %}
 
 {% block content %}
