--- a/app/Views/administrator/homeAdmin.html
+++ b/app/Views/administrator/homeAdmin.html
@@ -7,7 +7,7 @@
 {% block head %}
     {{parent()}}
 
-    <link rel="stylesheet" type="text/css" href="/css/administrator.css">
+    <link rel="stylesheet" type="text/css" href="/css/administrator/homeAdmin.css">
 {% endblock %}
 
 {% block content %}
@@ -23,9 +23,6 @@
                 </li>
                 <li>
                     <a class="nav-link btn btn-light" href="/administrator/deleteAccount">DELETE ACCOUNT</a>
-                </li>
-                <li>
-                    <a class="nav-link btn btn-light" href="/administrator/redirect">OFFICIAL SITE</a>
                 </li>
                 <li>
                     <a class="nav-link btn btn-light" href="/administrator/logout">LOG OUT</a>
