--- a/app/Views/root/home.html
+++ b/app/Views/root/home.html
@@ -4,7 +4,7 @@
 
 {% block head %}
     {{parent()}}
-    <link rel="stylesheet" type="text/css" href="/css/home.css">
+    <link rel="stylesheet" type="text/css" href="/css/root/home.css">
 {% endblock %}
 
 {% block content %}
