--- a/app/Views/root/login.html
+++ b/app/Views/root/login.html
@@ -1,10 +1,10 @@
 {% set pageTitle="LOGIN" %}
 
-{% extends "home/home.html" %}
+{% extends "root/home.html" %}
 
 {% block head %}
     {{parent()}}
-    <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link rel="stylesheet" type="text/css" href="/css/root/login.css">
 {% endblock %}
 
 {% block content %}
@@ -12,7 +12,7 @@
     {{parent()}}
     <div class="loginBox">
         <h1>WELCOME BACK!</h1>
-        <form action="/login" method="post">
+        <form action="/authenticate" method="post">
             <br>
             <p>EMAIL:</p>
             <input type="text" name="email" placeholder="Enter email" required>
