--- a/public/css/administrator/homeAdmin.css
+++ b/public/css/administrator/homeAdmin.css
@@ -1,6 +1,6 @@
 
 body{
-    background: url(admin.jpg) no-repeat center center fixed;
+    background: url(background.jpg) no-repeat center center fixed;
 }
 
 nav{
