--- a/public/css/root/home.css
+++ b/public/css/root/home.css
@@ -1,5 +1,5 @@
 body{
-    background: url(home.jpg) no-repeat center center fixed;
+    background: url(background.jpg) no-repeat center center fixed;
 }
 
 nav{
