--- a/app/Views/administrator/homeAdmin.html
+++ b/app/Views/administrator/homeAdmin.html
@@ -25,6 +25,9 @@
                     <a class="nav-link btn btn-light" href="/administrator/deleteAccount">DELETE ACCOUNT</a>
                 </li>
                 <li>
+                    <a class="nav-link btn btn-light" href="/administrator/project">ADD PROJECT</a>
+                </li>
+                <li>
                     <a class="nav-link btn btn-light" href="/logout">LOG OUT</a>
                 </li>
             </ul>
